# plm

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/cad-samples/: LampShade_Harp.3dm
docs/designs/: EPM-DESIGN.md
docs/sessions/: CHECKPOINT.md  SESSION-2026-02-05.md  SESSION-2026-02-06.md
frontend/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: app.spec.ts
frontend/src/: App.tsx
frontend/src/components/: CadFileUpload.tsx  Layout.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: BomDetail.tsx  BomFormPage.tsx  Boms.tsx  BulletinDetail.tsx  Bulletins.tsx  ChangeDetail.tsx  ChangeFormPage.tsx  Changes.tsx  Compliance.tsx  Costing.tsx  Dashboard.tsx  DocumentDetail.tsx  (+14 more)
migrations/: env.py
migrations/versions/: 20260131_0001_initial_schema.py  20260205_0002_add_domain_modules.py
scripts/: init-db.sql
src/plm/: __init__.py  manager.py
src/qms/: __init__.py
tests/: __init__.py  conftest.py  test_api_routers.py  test_boms.py  test_compliance.py  test_costing.py  test_documents.py  test_integrations.py  test_inventory.py  test_parts.py  test_procurement.py  test_projects.py  test_repositories.py  test_requirements.py  test_service_bulletins.py  test_services.py  test_suppliers.py
(+132 files in other folders)
